--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		it as a dependency instead, see pom-as-dependency.xml -->
 	<parent>
 		<groupId>com.backbase.buildingblocks</groupId>
-		<version>12.3.0</version>
+		<version>13.2.0</version>
 		<artifactId>service-sdk-starter-core</artifactId>
 		<relativePath />
 	</parent>
@@ -20,34 +20,34 @@
 	<packaging>war</packaging>
 	<name>Backbase :: Digital Banking Services :: my-bank-payments-batch-integration-service</name>
 
-    <!-- tag::add-properties[] -->
+	<!-- tag::add-properties[] -->
 	<properties>
 		<java.version>11</java.version>
-		<boat-maven-plugin.version>0.14.2</boat-maven-plugin.version>
+		<boat-maven-plugin.version>0.14.8</boat-maven-plugin.version>
 		<jsr305.version>3.0.2</jsr305.version>
 		
 		<specs.path>${project.build.directory}/specs</specs.path>
-		<payment-batch-integration-inbound-api.version>2.1.3</payment-batch-integration-inbound-api.version>
-		<payment-batch-integration-outbound-api.version>2.1.3</payment-batch-integration-outbound-api.version>
+		<payment-batch-integration-inbound-api.version>2.3.0</payment-batch-integration-inbound-api.version>
+		<payment-batch-integration-outbound-api.version>2.3.0</payment-batch-integration-outbound-api.version>
 	</properties>
-    <!-- end::add-properties[] -->
+	<!-- end::add-properties[] -->
 
-    <!-- tag::add-dependency-management[] -->
+	<!-- tag::add-dependency-management[] -->
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
 				<groupId>com.backbase.dbs</groupId>
 				<artifactId>banking-services-bom</artifactId>
-				<version>2.20.4.1</version>
+				<version>2.21.2</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-    <!-- end::add-dependency-management[] -->
+	<!-- end::add-dependency-management[] -->
 
 	<dependencies>
-        <!-- tag::add-building-blocks-dependencies[] -->
+		<!-- tag::add-building-blocks-dependencies[] -->
 		<dependency>
 			<groupId>com.backbase.buildingblocks</groupId>
 			<artifactId>service-sdk-common-core</artifactId>
@@ -64,7 +64,7 @@
 			<groupId>com.backbase.buildingblocks</groupId>
 			<artifactId>communication</artifactId>
 		</dependency>
-        <!-- end::add-building-blocks-dependencies[] -->
+		<!-- end::add-building-blocks-dependencies[] -->
 
 		<dependency>
 			<groupId>io.swagger</groupId>
@@ -80,8 +80,14 @@
 			<version>${jsr305.version}</version>
 		</dependency>
 		<dependency>
-	        <groupId>org.projectlombok</groupId>
-	        <artifactId>lombok</artifactId>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
+
+		<!-- Spring reactive WebClient -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
 		</dependency>
 
 		<dependency>
@@ -119,7 +125,7 @@
 				</executions>
 			</plugin>
 			
-            <!-- tag::add-dependency-plugin[] -->
+			<!-- tag::add-dependency-plugin[] -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
@@ -133,8 +139,8 @@
 						<configuration>
 							<artifactItems>
 								<artifactItem>
-									<groupId>com.backbase.dbs.paymentorder</groupId>
-									<artifactId>payment-order-service</artifactId>
+									<groupId>com.backbase.batch</groupId>
+									<artifactId>payment-batch</artifactId>
 									<classifier>api</classifier>
 									<type>zip</type>
 									<overWrite>true</overWrite>
@@ -145,9 +151,9 @@
 					</execution>
 				</executions>
 			</plugin>
-            <!-- end::add-dependency-plugin[] -->
-            
-            <!-- tag::add-boat-plugin[] -->
+			<!-- end::add-dependency-plugin[] -->
+
+			<!-- tag::add-boat-plugin[] -->
 			<plugin>
 				<groupId>com.backbase.oss</groupId>
 				<artifactId>boat-maven-plugin</artifactId>
@@ -160,28 +166,28 @@
 							<goal>generate-spring-boot-embedded</goal>
 						</goals>
 						<configuration>
-							<inputSpec>${specs.path}/payment/payment-batch-integration-outbound-api-v${payment-batch-integration-outbound-api.version}.yaml</inputSpec>
+							<inputSpec>${specs.path}/payment-batch/payment-batch-integration-outbound-api-v${payment-batch-integration-outbound-api.version}.yaml</inputSpec>
 							<modelPackage>com.backbase.payments.integration.model</modelPackage>
 							<apiPackage>com.backbase.payments.integration.outbound.api</apiPackage>
 						</configuration>
 					</execution>
-                    <!-- tag::add-inbound-integration-api[] -->
+					<!-- tag::add-inbound-integration-api[] -->
 					<execution>
 						<id>generate-integration-inbound-client</id>
 						<phase>generate-sources</phase>
 						<goals>
-							<goal>generate-rest-template-embedded</goal>
+							<goal>generate-webclient-embedded</goal>
 						</goals>
 						<configuration>
-							<inputSpec>${specs.path}/payment/payment-batch-integration-inbound-api-v${payment-batch-integration-inbound-api.version}.yaml</inputSpec>
+							<inputSpec>${specs.path}/payment-batch/payment-batch-integration-inbound-api-v${payment-batch-integration-inbound-api.version}.yaml</inputSpec>
 							<modelPackage>com.backbase.payments.integration.model</modelPackage>
 							<apiPackage>com.backbase.payments.integration.inbound.api</apiPackage>
 						</configuration>
 					</execution>
-                    <!-- end::add-inbound-integration-api[] -->
+					<!-- end::add-inbound-integration-api[] -->
 				</executions>
 			</plugin>
-            <!-- end::add-boat-plugin[] -->
+			<!-- end::add-boat-plugin[] -->
 		</plugins>
 	</build>
 
