--- a/src/test/resources/application-nacha-writer.properties
+++ b/src/test/resources/application-nacha-writer.properties
@@ -1,5 +1,5 @@
 backbase.batches.nacha.writer.defaultFormat = true
 backbase.batches.nacha.writer.settings.immediateDestinationCode = 999999999
 backbase.batches.nacha.writer.settings.immediateDestinationName = Immediator
-# allow all printable ASCII chars
+# by default allow all printable ASCII characters allowed, uncomment to restrict the allowed character set
 #backbase.batches.nacha.writer.settings.allowedCharactersRegex =  ^[a-z|A-Z|0-9| ]*$
